--- a/devWebI/aula1/olamundo.html
+++ b/devWebI/aula1/olamundo.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-   
-</head>
+<html>
 <body>
-
+    Halo Dunia! <!-- Indonesian for "Hello World!" -->
 </body>
 </html>
