--- a/devWebI/InvestiNeed/index.html
+++ b/devWebI/InvestiNeed/index.html
@@ -10,6 +10,8 @@
     <!-- Configura a visualização para dispositivos móveis -->
     <title>InvestiNeed</title>
     <!-- Define o título do documento, que aparece na aba do navegador -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- Importa o arquivo de estilos externo -->
 </head>
 
 <body>
@@ -18,7 +20,7 @@
         <!-- Div que contém o logo -->
         <div class="logo">
             <!-- Imagem do logo -->
-            <img src="/home/lucas/Documentos/ifes-3ano/SI-IFES-III/devWebI/InvestiNeed/resorces/LogoInvestiNeed.png" alt="Logo InvestiNeed">
+            <img src="../resorces/LogoInvestiNeed.png" alt="Logo InvestiNeed">
         </div>
         <!-- Lista de itens do menu -->
         <ul class="menu">
