--- a/devWebI/investi_need/index.html
+++ b/devWebI/investi_need/index.html
@@ -10,7 +10,7 @@
     <!-- Configura a visualização para dispositivos móveis -->
     <title>InvestiNeed</title>
     <!-- Define o título do documento, que aparece na aba do navegador -->
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="styles.css">
     <!-- Importa o arquivo de estilos externo -->
 </head>
 <body>
