--- a/devWebI/aula/olamundo.html
+++ b/devWebI/aula/olamundo.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
-<body>
-    Halo Dunia! <!-- Indonesian for "Hello World!" -->
-</body>
+<!-- Declara o tipo de documento como HTML5 -->
+<html lang="pt-BR">
+    <!-- Inicia o elemento raiz do documento HTML e define o idioma como português do Brasil -->
+    <body>
+        <!-- Contém o conteúdo visível da página -->
+        Halo Dunia! <!-- Define um título de segundo nível e aplica ênfase -->
+    </body>
 </html>
