--- a/devWebI/aula/olamundo.html
+++ b/devWebI/aula/olamundo.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <!-- Declara o tipo de documento como HTML5 -->
 <html lang="pt-BR">
+    <head>
+        <title>Olá Mundo - Halo Dunia!</title>
+    </head>
     <!-- Inicia o elemento raiz do documento HTML e define o idioma como português do Brasil -->
     <body>
         <!-- Contém o conteúdo visível da página -->
