--- a/devWebI/aula/olamundo.html
+++ b/devWebI/aula/olamundo.html
@@ -2,11 +2,26 @@
 <!-- Declara o tipo de documento como HTML5 -->
 <html lang="pt-BR">
     <head>
+        <!-- Contém metadados sobre o documento -->
+        <meta charset="UTF-8">
+        <!-- Define a codificação de caracteres para o documento -->
         <title>Olá Mundo - Halo Dunia!</title>
     </head>
     <!-- Inicia o elemento raiz do documento HTML e define o idioma como português do Brasil -->
     <body>
+        <h1>Minha <span style="color: brown;">Primeira</span> Pagina</h1>
+        <h2>Essa sera a minha primeira página.</h2>
         <!-- Contém o conteúdo visível da página -->
-        Halo Dunia! <!-- Define um título de segundo nível e aplica ênfase -->
+        <p>Halo Dunia!</p> 
+        <p>
+            Ola turma de SI 
+            <br>
+            <mark>A turma de DevWeb e muito legal</mark>
+        </p> 
+        
+        <p>
+            <strong>Lorem</strong> <sup>ipsum dolor sit amet consectetur adipisicing elit.</sup> <strong>Iure</strong> qui voluptatibus <i>voluptates eius</i> officia hic vero eligendi fugit <ins>laborum autem</ins> impedit <i>labore <ins>corrupti nihil</ins></i> dolor, quos alias optio <strong><sub>reprehenderit!</sub></strong> Soluta possimus ab magni. <del>Inventore illo nesciunt sit. Id,</del> <sub>commodi. Veniam.</sub>
+        </p>
+
     </body>
 </html>
