--- a/devWebI/aula/pagina02.html
+++ b/devWebI/aula/pagina02.html
@@ -13,7 +13,7 @@
     <a href="olamundo.html">Ir para Ola Mundo</a>
 
     <p>
-        <a href="https://colatina.ifes.edu.br/" target="_blank"><img src="" alt="Paisagem Aleatoria"></a>
+        <a href="https://colatina.ifes.edu.br/" target="_blank"><img src="/home/lucas/Documentos/ifes-3ano/SI-IFES-III/devWebI/imagens/paisagem-natural-og.webp" alt="Paisagem Aleatoria"></a>
         
     </p>
 </body>
