--- a/devWebI/investi_need/index.html
+++ b/devWebI/investi_need/index.html
@@ -24,7 +24,7 @@
         <!-- Lista de itens do menu -->
         <ul class="menu">
             <!-- Item do menu: Sobre a XP -->
-            <li><a href="#">Sobre a InvestiNeed ▾</a>
+            <li><a href="/devWebI/investi_need/sobreInvestiNeed.html">Sobre a InvestiNeed ▾</a>
                 <!-- Submenu do item: Sobre a XP -->
                 <ul class="submenu">
                     <!-- Item do submenu: Quem somos -->
