--- a/devWebI/investi_need/index.html
+++ b/devWebI/investi_need/index.html
@@ -23,15 +23,15 @@
         </div>
         <!-- Lista de itens do menu -->
         <ul class="menu">
-            <!-- Item do menu: Sobre a XP -->
-            <li><a href="/devWebI/investi_need/sobreInvestiNeed.html">Sobre a InvestiNeed ▾</a>
-                <!-- Submenu do item: Sobre a XP -->
+            <!-- Item do menu: Sobre a InvestiNeed -->
+            <li class="dropdown"><a href="/devWebI/investi_need/sobreInvestiNeed.html">Sobre a InvestiNeed ▾</a>
+                <!-- Submenu do item: Sobre a InvestiNeed -->
                 <ul class="submenu">
                     <!-- Item do submenu: Quem somos -->
                     <li><a href="#">Quem somos</a></li>
                     <!-- Item do submenu: Nossos valores -->
                     <li><a href="#">Nossos valores</a></li>
-                    <!-- Item do submenu: Carreiras -->
+                    <!-- Item do submenu: Nossos Resultados -->
                     <li><a href="#">Nossos Resultados</a></li>
                 </ul>
             </li>
