--- a/devWebI/investi_need/index.html
+++ b/devWebI/investi_need/index.html
@@ -36,15 +36,15 @@
                 </ul>
             </li>
             <!-- Item do menu: Produtos e Serviços -->
-            <li><a href="#">Produtos e Serviços ▾</a></li>
+            <li><a href="/devWebI/investi_need/produtosservicos.html">Produtos e Serviços ▾</a></li>
             <!-- Item do menu: Conteúdos -->
-            <li><a href="#">Conteúdos ▾</a></li>
+            <li><a href="/devWebI/investi_need/conteudo.html">Conteúdos ▾</a></li>
             <!-- Item do menu: Empresas -->
-            <li><a href="#">Empresas</a></li>
+            <li><a href="/devWebI/investi_need/empresas.html">Empresas</a></li>
             <!-- Item do menu: Área do Trader -->
-            <li><a href="#">Área do Trader</a></li>
+            <li><a href="/devWebI/investi_need/areatrader.html">Área do Trader</a></li>
             <!-- Item do menu: Tire suas dúvidas -->
-            <li><a href="#">Tire suas dúvidas ▾</a></li>
+            <li><a href="/devWebI/investi_need/duvidas.html">Tire suas dúvidas ▾</a></li>
             <!-- Item do menu: Acesse sua conta -->
             <li><a href="#" class="acessar">Acesse sua conta →</a></li>
             <!-- Item do menu: Abra sua conta -->
