--- a/devWebI/aula/listas.html
+++ b/devWebI/aula/listas.html
@@ -6,6 +6,33 @@
     <title>Listas</title>
 </head>
 <body>
-    
+    <h1>Lista de Topicos</h1>
+
+    <h2>Lista do Supermercado</h2>
+
+    <ul>
+        <li>Carne</li>
+        <li>Pão</li>
+        <li>Cerveja</li>
+        <li>Tomate</li>
+        <li>Pimentão</li>
+        <li>Cebola</li>
+        <li>Carvão</li>
+        <li>Red Bull</li>
+    </ul>
+
+    <h2>Lista de Enumerada</h2>
+
+    <ol type="I">
+        <li>Game Of Thornes</li>
+        <li>Dragon Ball Z</li>
+        <li>Fallout</li>
+        <li>Cobra Kai</li>
+        <li>Legend of Vox Machina</li>
+        <li>Breaking Bad</li>
+        <li>Stranger Things</li>
+        <li>Black Mirror</li>
+    </ol>
+
 </body>
 </html>
