--- a/devWebI/aula/listas.html
+++ b/devWebI/aula/listas.html
@@ -12,6 +12,23 @@
 
     <ul>
         <li>Carne</li>
+            <ul>
+                <li>Picanha</li>
+                <li>Costela</li>
+                <li>Cochinha da Asa</li>
+                <li>Alcatra</li>
+                <li>Linguiça Suina</li>
+                <ul>
+                    <li>Calabresa</li>
+                    <li>Frango</li>
+                    <li>Porco</li>
+                    <ul>
+                        <li>Costelinha</li>
+                        <li>Paleta</li>
+                        <li>Pernil</li>
+                    </ul>
+                </ul>    
+            </ul>
         <li>Pão</li>
         <li>Cerveja</li>
         <li>Tomate</li>
@@ -26,6 +43,11 @@
     <ol type="I">
         <li>Game Of Thornes</li>
         <li>Dragon Ball Z</li>
+        <ol type="1">
+            <li>Dragon Ball Z</li>
+            <li>Dragon Ball GT</li>
+            <li>Dragon Ball Super</li>
+        </ol>
         <li>Fallout</li>
         <li>Cobra Kai</li>
         <li>Legend of Vox Machina</li>
