--- a/devWebI/aula/listas.html
+++ b/devWebI/aula/listas.html
@@ -48,12 +48,13 @@
             <li>Dragon Ball GT</li>
             <li>Dragon Ball Super</li>
         </ol>
-        <li>Fallout</li>
+        <li><a href="https://www.imdb.com/pt/title/tt12637874/" target="_blank">Fallout</a></li>
         <li>Cobra Kai</li>
         <li>Legend of Vox Machina</li>
         <li>Breaking Bad</li>
         <li>Stranger Things</li>
         <li>Black Mirror</li>
+        <li>Supernatural</li>
     </ol>
 
 </body>
