--- a/devWebI/aula/tabelas.html
+++ b/devWebI/aula/tabelas.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Tabela Simples 3x3</h1>
 
-    <table border="1">
+    <table border="1" width="100%">
         <tr>
             <td>Linha 1 Coluna 1</td>
             <td>Linha 1 Coluna 2</td>
@@ -25,6 +25,84 @@
             <td>Linha 3 Coluna 3</td>
     </table>
         
+    <h1>Tabela Com Título 2x3</h1>
+
+    <table border="1" width="100%">
+        <thead>
+            <tr>
+                <th>Título Coluna 1</th>
+                <th>Título Coluna 2</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Linha 1 Coluna 1</td>
+                <td>Linha 1 Coluna 2</td>
+            </tr>
+            <tr>
+                <td>Linha 2 Coluna 1</td>
+                <td>Linha 2 Coluna 2</td>
+            </tr>
+            <tr>
+                <td>Linha 3 Coluna 1</td>
+                <td>Linha 3 Coluna 2</td>
+            </tr>
+        </tbody>
+    </table>
     
+    <h1>Tabela SImples com Mesclagem de Coluna</h1>
+
+    <table border="1" width="50%">
+        <tr>
+            <td colspan="2">Mesclagem de Coluna 1 e 2</td>
+        </tr>
+        <tr>
+            <td>Linha 2 Coluna 1</td>
+            <td>Linha 2 Coluna 2</td>
+        </tr>
+        <tr>
+            <td>Linha 3 Coluna 1</td>
+            <td>Linha 3 Coluna 2</td>
+        </tr>
+    </table>    
+
+    <h1>Exercicio Mesclagem de Coluna</h1>
+
+    <table border="1" width="100%">
+        <thead>
+            <tr>
+                <th>Título Coluna 1</th>
+                <th>Título Coluna 2</th>
+                <th>Título Coluna 3</th>
+                <th>Título Coluna 4</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Linha 1 Coluna 1</td>
+                <td colspan="3">Mesclagem de Coluna 2, 3 e 4</td>
+            </tr>
+            <tr>
+                <td>Linha 2 Coluna 1</td>
+                <td colspan="2">Mesclagem de Coluna 2 e 3</td>
+                <td>Linha 2 Coluna 4</td>
+            </tr>
+            <tr>
+                <td colspan="3">Mesclagem de Coluna 1, 2 e 3</td>
+                <td>Linha 3 Coluna 4</td>
+            </tr>
+            <tr>
+                <td colspan="2">Mesclagem de Coluna 1 e 2</td>
+                <td colspan="2">Mesclagem de Coluna 3 e 4</td>
+            </tr>
+            <tr>
+                <td>Linha 5 Coluna 1</td>
+                <td>Linha 5 Coluna 2</td>
+                <td>Linha 5 Coluna 3</td>
+                <td>Linha 5 Coluna 4</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
