--- a/devWebI/aula/tabelas.html
+++ b/devWebI/aula/tabelas.html
@@ -104,5 +104,55 @@
         </tbody>
     </table>
 
+    <h1>Mesclagem de Linhas</h1>
+
+    <table border="1" width="100%">
+        <thead>
+            <tr>
+                <th>Título Coluna 1</th>
+                <th>Título Coluna 2</th>
+                <th>Título Coluna 3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">Mesclagem de Linha 1 e 2 Coluna 1</td>
+                <td>Linha 1 Coluna 2</td>
+                <td>Linha 1 Coluna 3</td>
+            </tr>
+            <tr>
+                <td>Linha 2 Coluna 2</td>
+                <td>Linha 2 Coluna 3</td>
+            </tr>
+            <tr>
+                <td>Linha 3 Coluna 1</td>
+                <td>Linha 3 Coluna 2</td>
+                <td>Linha 3 Coluna 3</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h1>Exercicio Mesclagem de Linhas</h1>
+    <table border="1" width="100%">
+        <tr>
+            <td>Linha 1 Coluna 1</td>
+            <td>Linha 1 Coluna 2</td>
+            <td rowspan="2">Mesclagem de Linha 1 e 2 Coluna 3</td>
+        </tr>
+        <tr>
+            <td rowspan="3">Mesclagem de Linha 1, 2 e 3 Coluna 1</td>
+            <td>Linha 2 Coluna 2</td>
+        </tr>
+        <tr>
+            <td>Linha 3 Coluna 2</td>
+            <td>Linha 3 Coluna 3</td>
+        </tr>
+        <tr>
+            <td>Linha 4 Coluna 2</td>
+            <td>Linha 4 Coluna 3</td>
+
+        </tr>
+    </table>
+
 </body>
 </html>
