--- a/devWebI/aula/tabelas.html
+++ b/devWebI/aula/tabelas.html
@@ -154,5 +154,107 @@
         </tr>
     </table>
 
+    <h1>Exercicio Final de Tabela</h1>
+
+    <table border="1" width="100%">
+        <thead>
+            <tr>
+                <th>Título Coluna 1</th>
+                <th>Título Coluna 2</th>
+                <th>Título Coluna 3</th>
+                <th>Título Coluna 4</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Linha 1 Coluna 1</td>
+                <td colspan="3">Mesclagem de Coluna 2, 3 e 4</td>
+            </tr>
+            <tr>
+                <td rowspan="2">Mesclagem de Linha 2 e 3 Coluna 1</td>
+                <td>Linha 2 Coluna 2</td>
+                <td colspan="2">Mesclagem de Coluna 3 e 4</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Mesclagem de Linha 2 Colunas 2, 3 e 4</td>
+                <td>Linha 3 Coluna 3</td>
+                <td>Linha 3 Coluna 4</td>
+            </tr>
+            <tr>
+                <td>Linha 4 Coluna 1</td>
+                <td>Linha 4 Coluna 3</td>
+                <td rowspan="2">Mesclagem de Linha 4 e 5 Coluna 4</td>
+            </tr>
+            <tr>
+                <td>Linha 5 Coluna 1</td>
+                <td>Linha 5 Coluna 3</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h1>Templates Tabelas</h1>
+
+    <table border="1" width="100%">
+        <tr>
+            <td>Coluna 1</td>
+            <td>Coluna 2</td>
+            <td>Coluna 3</td>
+        </tr>
+        <tr>
+            <td>Coluna 1</td>
+            <td>Coluna 2</td>
+            <td>Coluna 3</td>
+        </tr>
+        <tr>
+            <td>Coluna 1</td>
+            <td>Coluna 2</td>
+            <td>Coluna 3</td>
+        </tr>
+    </table>
+    <h2>Templates Tabelas</h2>
+    <table border="1" width="100%">
+        <tr>
+            <td colspan="2">?</td>
+            <td>?</td>
+        </tr>
+        <tr>
+            <td>?</td>
+            <td rowspan="2">?</td>
+            <td>?</td>
+        </tr>
+        <tr>
+            <td>?</td>
+            <td>?</td>
+        </tr>
+    </table>
+
+    <table border="1" width="100%">
+        <tr>
+            <td colspan="2">?</td>
+            <td colspan="2">?</td>
+        </tr>
+        <tr>
+            <td>?</td>
+            <td colspan="2">?</td>
+            <td rowspan="4">?</td>
+        </tr>
+        <tr>
+            <td>?</td>
+            <td rowspan="2">?</td>
+            <td>?</td>
+
+        </tr>
+        <tr>
+            <td>?</td>
+            <td>?</td>
+
+        </tr>
+        <tr>
+            <td colspan="2">?</td>
+            <td>?</td>
+
+        </tr>
+    </table>
+    
 </body>
 </html>
