--- a/devWebI/aula/tabelas.html
+++ b/devWebI/aula/tabelas.html
@@ -212,7 +212,7 @@
         </tr>
     </table>
     <h2>Templates Tabelas</h2>
-    <table border="1" width="100%">
+    <table border="3" width="100%">
         <tr>
             <td colspan="2">?</td>
             <td>?</td>
@@ -228,7 +228,7 @@
         </tr>
     </table>
 
-    <table border="1" width="100%">
+    <table border="3" width="100%" style="margin-top: 20px;">
         <tr>
             <td colspan="2">?</td>
             <td colspan="2">?</td>
