--- a/devWebI/aula/pagina-css.html
+++ b/devWebI/aula/pagina-css.html
@@ -6,7 +6,8 @@
     <title>Página CSS - Exemplos</title>
 </head>
 <body>
-    <h1 style="color: rebeccapurple;">Lorem ipsum dolor sit amet.</h1>
+    <h1 style="color: #00FF; text-align: center;">Lorem ipsum dolor sit amet.</h1>
+    <!-- <h2 style="color: rgb(0, 255, 0)">Lorem ipsum dolor sit amet.</h2> -->
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iste error quod dolore, rem reiciendis molestiae. Debitis neque dicta, perspiciatis, aperiam voluptate delectus molestiae quasi illum ipsa similique iste veritatis excepturi expedita? Iusto necessitatibus dicta architecto provident id quam dolorum, deserunt sit ducimus aperiam sed, rerum veritatis repudiandae culpa blanditiis?</p>
 
