--- a/devWebI/aula/pagina-css.html
+++ b/devWebI/aula/pagina-css.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página CSS - Exemplos</title>
+    <style>
+        p {
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: #00FF; text-align: center;">Lorem ipsum dolor sit amet.</h1>
@@ -11,7 +16,9 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iste error quod dolore, rem reiciendis molestiae. Debitis neque dicta, perspiciatis, aperiam voluptate delectus molestiae quasi illum ipsa similique iste veritatis excepturi expedita? Iusto necessitatibus dicta architecto provident id quam dolorum, deserunt sit ducimus aperiam sed, rerum veritatis repudiandae culpa blanditiis?</p>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima suscipit modi beatae recusandae adipisci? Debitis modi, architecto labore repudiandae voluptates temporibus nam minima rem, tempore doloribus et consequuntur perferendis tenetur?</p>
 
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem eum nulla facilis mollitia incidunt, deserunt asperiores velit officia, temporibus iste unde quibusdam sed quo commodi repellendus voluptatibus optio est, sapiente recusandae molestiae corrupti quaerat quam culpa! Dolore tempore quibusdam neque.</p>
 
 </body>
 </html>
