--- a/devWebI/aula/pagina-css.html
+++ b/devWebI/aula/pagina-css.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página CSS - Exemplos</title>
-    <style>
+    <!-- <style>
         p {
+            color: indianred;
             text-align: justify;
         }
-    </style>
+        h1 {
+            font-size: 50px;
+            border: 2px solid green;
+            color: aquamarine;
+            text-align: center;
+        }
+    </style> -->
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1 style="color: #00FF; text-align: center;">Lorem ipsum dolor sit amet.</h1>
+    <!-- <h1 style="color: #00FF;">Lorem ipsum dolor sit amet.</h1> -->
+    <h1>Lorem ipsum dolor sit amet.</h1>
     <!-- <h2 style="color: rgb(0, 255, 0)">Lorem ipsum dolor sit amet.</h2> -->
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iste error quod dolore, rem reiciendis molestiae. Debitis neque dicta, perspiciatis, aperiam voluptate delectus molestiae quasi illum ipsa similique iste veritatis excepturi expedita? Iusto necessitatibus dicta architecto provident id quam dolorum, deserunt sit ducimus aperiam sed, rerum veritatis repudiandae culpa blanditiis?</p>
