--- a/devWebI/aula/pagina-css.html
+++ b/devWebI/aula/pagina-css.html
@@ -23,7 +23,7 @@
     <h1>Lorem ipsum dolor sit amet.</h1>
     <!-- <h2 style="color: rgb(0, 255, 0)">Lorem ipsum dolor sit amet.</h2> -->
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iste error quod dolore, rem reiciendis molestiae. Debitis neque dicta, perspiciatis, aperiam voluptate delectus molestiae quasi illum ipsa similique iste veritatis excepturi expedita? Iusto necessitatibus dicta architecto provident id quam dolorum, deserunt sit ducimus aperiam sed, rerum veritatis repudiandae culpa blanditiis?</p>
+    <p id="paragrafo-principal">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iste error quod dolore, rem reiciendis molestiae. Debitis neque dicta, perspiciatis, aperiam voluptate delectus molestiae quasi illum ipsa similique iste veritatis excepturi expedita? Iusto necessitatibus dicta architecto provident id quam dolorum, deserunt sit ducimus aperiam sed, rerum veritatis repudiandae culpa blanditiis?</p>
 
     <p class="destaque fgrande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima suscipit modi beatae recusandae adipisci? Debitis modi, architecto labore repudiandae voluptates temporibus nam minima rem, tempore doloribus et consequuntur perferendis tenetur?</p>
 
