--- a/devWebI/aula/pagina-css.html
+++ b/devWebI/aula/pagina-css.html
@@ -29,5 +29,16 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem eum nulla facilis mollitia incidunt, deserunt asperiores velit officia, temporibus iste unde quibusdam sed quo commodi repellendus voluptatibus optio est, sapiente recusandae molestiae corrupti quaerat quam culpa! Dolore tempore quibusdam neque.</p>
 
+    <h2>Exercicio de Fixação</h2>
+    <h5>Original:</h5>
+    <p>
+        <strong>Lorem</strong> <sup>ipsum dolor sit amet consectetur adipisicing elit.</sup> <strong>Iure</strong> qui voluptatibus <i>voluptates eius</i> officia hic vero eligendi fugit <ins>laborum autem</ins> impedit <i>labore <ins>corrupti nihil</ins></i> dolor, quos alias optio <strong><sub>reprehenderit!</sub></strong> Soluta possimus ab magni. <del>Inventore illo nesciunt sit. Id,</del> <sub>commodi. Veniam.</sub>
+    </p>
+
+    <h5>Modificado:</h5>
+    <p>
+        <span class="negrito">Lorem</span> <span class="sobrescrito">ipsum dolor sit amet consectetur adipisicing elit.</span> <span class="negrito">Iure</span> qui voluptatibus <span class="italico">voluptates eius</span> officia hic vero eligendi fugit <span class="subilinhado">laborum autem</span> impedit <span class="italico">labore <span class="subilinhado">corrupti nihil</span></span> dolor, quos alias optio <span class="negrito"><span class="subescrito">reprehenderit!</span></span> Soluta possimus ab magni. <span class="tachado">Inventore illo nesciunt sit. Id,</span> <span class="subescrito">commodi. Veniam.</span>
+    </p>
+
 </body>
 </html>
