--- a/devWebI/aula/tags-semantica.html
+++ b/devWebI/aula/tags-semantica.html
@@ -5,9 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
-    <title>Document</title>
+    <title>HTML - Tags Semanticas</title>
 </head>
 <body>
-    
+    <header>
+        <h1>HTML - Tags Semanticas</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+    <section>
+        <article>
+            <h2>Artigo 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </article>
+        <article>
+            <h2>Artigo 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </article>                
+    </section>
+    <main>
+        <h2>Conteúdo Principal</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <figure>
+            <img src="/devWebI/aula/imagens/paisagem-natural.webp" alt="Imagem de exemplo">
+            <figcaption>Imagem de exemplo</figcaption>
+        </figure>
+    </main>
+    <aside>
+        <h2>Barra Lateral</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </aside>
+    <footer>
+        <p>&copy; 2020 - Todos os direitos reservados</p>
+    </footer>
+
 </body>
 </html>
