--- a/devWebI/aula/exercicio-fixacao/exercicio2/index.html
+++ b/devWebI/aula/exercicio-fixacao/exercicio2/index.html
@@ -8,31 +8,53 @@
 </head>
 <body>
     <header>
-        <h1>Bem vindo a pagina</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">sobre</a></li>
-                <li><a href="#contact">contato</a></li>
-            </ul>
-        </nav>
+        <h1>Intermediários potentes: conheça novos celulares Samsung a partir de R$ 799</h1>
+        <h6>Marcella Duarte<span style="float: right;">Do Guia de Compras UOL</span><br><span class="light-gray-text">26/02/2024 - 04h00</span></h6>
     </header>
-    <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home section of the page.</p>
+    <main> 
+        <figure>
+            <img src="/devWebI/aula/imagens/samsung-celulares-a-1708965367535_v2_900x506.jpg.webp" alt="Celulares Samsung Galaxy A" style="max-width: 100%; height: auto;">
+            <figcaption>
+            <h6>Novos celulares da linha Galaxy A, da Samsung</h6>
+            <span class="light-gray-text">Imagem: Marcella Duarte/UOL</span>
+            </figcaption>
+        </figure>
+        <article>
+            <p class="letra-principal">A <a href="#">Samsung</a> lançou recentemente no Brasil cinco novos smartphones de baixo custo: Galaxy A05, Galaxy A05s, Galaxy A15 LTE, Galaxy A15 <a href="#">5G</a> e Galaxy A25 5G. Apesar de serem modelos intermediários, eles são completinhos, com bons recursos para o dia a dia, como tela grande, bateria de longa duração e câmeras potentes. Os preços variam entre R$ 799 e R$ 2.299.</p>
+            <p class="letra-principal">Saiba mais sobre cada um dos modelos a seguir:</p>
+        </article>
+        <section>
+            <h2>Galaxy A05</h2>
+            <ul>
+                <li class="letra-principal">Tela: 6,7 polegadas HD+</li>
+                <li class="letra-principal">Câmeras traseiras: 50 MP (principal) e 2 MP (profundidade)</li>
+                <li class="letra-principal">Câmera de selfie: 8 MP</li>
+                <li class="letra-principal">Armazenamento interno: 128 GB</li>
+                <li class="letra-principal">Memória RAM: 4 GB</li>
+                <li class="letra-principal">Processador: MediaTek Helio G85</li>
+                <li class="letra-principal">Câmera frontal: 5 MP</li>
+                <li class="letra-principal">Bateria: 5.000 mAh</li>
+                <li class="letra-principal">Cores: Preto, prata e verde</li>
+                <li class="letra-principal">Preço sugerido: R$ 799</li>
+            </ul>
         </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>This section contains information about the page.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>This section contains contact information.</p>
+        <section>
+            <h2 class="semititulo">Galaxy A05s</h2>
+            <ul >
+                <li class="letra-principal">Tela: 6,7 polegadas Full HD+</li>
+                <li class="letra-principal">Câmeras traseiras: 50 MP (principal), 2 MP (profundidade) e 2 MP (macro)</li>
+                <li class="letra-principal">Câmera de selfie: 13 MP</li>
+                <li class="letra-principal">Armazenamento interno: 128 GB</li>
+                <li class="letra-principal">Memória RAM: 6 GB</li>
+                <li class="letra-principal">Processador: Snapdragon 680</li>
+                <li class="letra-principal">Bateria: 5.000 mAh</li>
+                <li class="letra-principal">Cores: Preto, prata e violeta</li>
+                <li class="letra-principal">Preço sugerido: R$ 999</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 My Simple Page</p>
+        <p class="letra-principal">Quer saber mais sobre eletrônicos, produtos de casa, de beleza e achadinhos do momento? Fique de olho na nossa curadoria de ofertas: no <a href="#">Monitor de Ofertas UOL</a>, no X (ex-Twitter) (<a href="#">@ofertas_uol</a>), no Telegram (<a href="#">monitordeofertasuol</a>) e nos vídeos do TikTok (<a href="#">@guiadecompras_uol</a>)</p>
     </footer>
 </body>
 </html>
