--- a/devWebI/aula/exercicio-fixacao/exercicio1/exercicio-fixacao.html
+++ b/devWebI/aula/exercicio-fixacao/exercicio1/exercicio-fixacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celular Barato: Samsung lança linha Galaxy A a partir de R$ 799</title>
+    <title>Exercicio 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
