--- a/devWebI/aula/exercicio-fixacao/exercicio2/index.html
+++ b/devWebI/aula/exercicio-fixacao/exercicio2/index.html
@@ -12,18 +12,18 @@
         <h6>Marcella Duarte<span style="float: right;">Do Guia de Compras UOL</span><br><span class="light-gray-text">26/02/2024 - 04h00</span></h6>
     </header>
     <main> 
-        <figure>
-            <img src="/devWebI/aula/imagens/samsung-celulares-a-1708965367535_v2_900x506.jpg.webp" alt="Celulares Samsung Galaxy A" style="max-width: 100%; height: auto;">
+        <figure style="text-align: center;"></figure>
+            <img src="/devWebI/aula/imagens/samsung-celulares-a-1708965367535_v2_900x506.jpg.webp" alt="Celulares Samsung Galaxy A" width="900" height="506" style="display: block; margin: 0 auto;">
             <figcaption>
             <h6>Novos celulares da linha Galaxy A, da Samsung</h6>
             <span class="light-gray-text">Imagem: Marcella Duarte/UOL</span>
             </figcaption>
         </figure>
-        <article>
+        <article style="max-width: 900px; margin: 0 auto;"></article>
             <p class="letra-principal">A <a href="#">Samsung</a> lançou recentemente no Brasil cinco novos smartphones de baixo custo: Galaxy A05, Galaxy A05s, Galaxy A15 LTE, Galaxy A15 <a href="#">5G</a> e Galaxy A25 5G. Apesar de serem modelos intermediários, eles são completinhos, com bons recursos para o dia a dia, como tela grande, bateria de longa duração e câmeras potentes. Os preços variam entre R$ 799 e R$ 2.299.</p>
             <p class="letra-principal">Saiba mais sobre cada um dos modelos a seguir:</p>
         </article>
-        <section>
+        <section style="max-width: 900px; margin: 0 auto;"></section>
             <h2>Galaxy A05</h2>
             <ul>
                 <li class="letra-principal">Tela: 6,7 polegadas HD+</li>
