--- a/devWebI/aula/exercicio-avaliativo-I/index.html
+++ b/devWebI/aula/exercicio-avaliativo-I/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atividade Avaliativa 1 - Lucas e Luis</title>
-		<link rel="stylesheet" href="./src/css/reset.css">
-		<link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <header>
@@ -24,29 +24,87 @@
           <img src="./src/imgs/img01.webp" alt="1" />
           <figcaption>
             Quais são as 5 moedas mais desvalorizadas do mundo em relação ao
-            dólar? Conheça<br />Imagem: Dado Ruvic/Reuters
+            dólar? Conheça<br />
+            <span class="sub"> Imagem: Dado Ruvic/Reuters </span>
           </figcaption>
         </figure>
-        <p>Gabriel Dias<br />Colaboração para o UOL<br />29/03/2022 04h00</p>
-      </section>
-      <article>
-        <p>
-          Mesmo com a guerra e a crise econômica, o dólar operou em queda na
-          última semana. Na segunda-feira (25), a moeda norte-americana estava
-          na casa de R$ 4,79 na venda. O dólar norte-americano é utilizado como
-          referência para as operações em todo o mundo e a importância dessa
-          moeda se dá por várias razões. Primeiro, porque os Estados Unidos são
-          uma nação de devedores confiáveis e possuem uma economia forte. Além
-          disso, o dólar é uma moeda estável, que não costuma ter quedas
-          acentuadas e inesperadas. Guia do Investidor UOL: evento grátis ensina
-          você a investir. Mas você sabe quais são as moedas mais desvalorizadas
-          do mundo em relação ao dólar? Um levantamento feito pela Economatica,
-          que compara moedas de 25 países, mostra que a lira turca é a moeda
-          mais desvalorizada do mundo, seguida das moedas de Argentina e Chile
-          (peso). Já o real brasileiro ocupa a 12ª posição da lista.
+        <p class="legenda-container">
+					<p class="legenda">
+						Gabriel Dias
+					</p>
+					<p class="legenda">
+						Colaboração para o UOL
+					</p>
+          <span class="sub">29/03/2022 04h00 </span>
         </p>
-      </article>
+        <article>
+          <p>
+            Mesmo com a guerra e a crise econômica,<a href="#">
+
+							o dólar operou em queda na
+							última semana.
+						</a>
+						 Na segunda-feira (25), a moeda norte-americana estava
+            na casa de R$ 4,79 na venda.
+          </p>
+
+          <p>
+            O dólar norte-americano é utilizado como referência para as
+            operações em todo o mundo e a importância dessa moeda se dá por
+            várias razões. Primeiro, porque os Estados Unidos são uma nação de
+            devedores confiáveis e possuem uma economia forte. Além disso, o
+            dólar é uma moeda estável, que não costuma ter quedas acentuadas e
+            inesperadas.
+          </p>
+
+          <a>Guia do Investidor UOL: evento grátis ensina você a investir.</a>
+
+          <p>
+            Mas você sabe quais são as moedas mais desvalorizadas do mundo em
+            relação ao dólar?
+          </p>
+
+          <p>
+            Um levantamento feito pela Economatica, que compara moedas de 25
+            países, mostra que a lira turca é a moeda mais desvalorizada do
+            mundo, seguida das moedas de Argentina e Chile (peso). Já o real
+            brasileiro ocupa a 12ª posição da lista.
+          </p>
+        </article>
+      </section>
+      <section>
+        <h2>Lira Turca</h2>
+        <figure>
+          <img class="imagem-main" src="./src/imgs/img02.webp" alt="2" />
+          <figcaption>
+            Notas da lira turca<br />
+            <span class="sub"> Imagem: Murad Sezer/Reuters. </span>
+          </figcaption>
+        </figure>
+        <article>
+          <p>
+            A Turquia viu sua moeda despencar em 2021, com o dólar subindo mais
+            de 37% sobre a lira. Atualmente, uma lira está valendo apenas 0,067
+            dólar americano.
+          </p>
+
+          <p>
+            A interferência do presidente turco, Recep Tayyip Erdogan, sobre a
+            política monetária do país é apontada como um dos principais motivos
+            para a crise cambial. A ordem ao banco central turco é de cortar os
+            juros, priorizando o crédito e as exportações, deixando de lado a
+            estabilidade da moeda.
+          </p>
+
+          <p>
+            Essa desvalorização da moeda tem feito a população turca sentir no
+            bolso, com a inflação do país atingindo seus níveis mais altos.
+          </p>
+        </article>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <!-- <p>Fonte: https://economia.uol.com.br/noticias/redacao/2022/03/29/moedas-mais-desvalorizadas-do-mundo.htm</p> -->
+    </footer>
   </body>
 </html>
