--- a/devWebI/aula/css2/index.html
+++ b/devWebI/aula/css2/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        
-        <h1>Lorem ipsum dolor sit amet.</h1>
+
+        <h1 class="destaque fgrande">Lorem ipsum dolor sit amet.</h1>
 
         <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam quasi ullam voluptatem. Facilis, obcaecati quam?</h2>
 
     </header>
     <main>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni deleniti, sint dicta corporis vel vitae perspiciatis dolore beatae in adipisci.</p>
+        <p class="destaque">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni deleniti, sint dicta corporis vel vitae perspiciatis dolore beatae in adipisci.</p>
 
         <h1>Lorem ipsum dolor sit amet.</h1>
 
@@ -33,14 +33,14 @@
     <section>
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque?</h2>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime incidunt corrupti maiores eius repellat temporibus explicabo, architecto recusandae pariatur optio, vitae cupiditate voluptatum minima similique ex enim eligendi iste repellendus ipsa voluptatibus beatae. Iusto incidunt adipisci laboriosam animi in. Nesciunt!</p>
+        <p class="destaque">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime incidunt corrupti maiores eius repellat temporibus explicabo, architecto recusandae pariatur optio, vitae cupiditate voluptatum minima similique ex enim eligendi iste repellendus ipsa voluptatibus beatae. Iusto incidunt adipisci laboriosam animi in. Nesciunt!</p>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aspernatur modi quaerat optio nesciunt repellendus obcaecati nulla, inventore a, dolorem fugiat maxime porro? Dolores dolorum similique voluptates a. Fuga, officia.</p>
     </section>
     <footer>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, animi?</p>
-
         <nav>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias, iure!</p>
             <ul>
                 <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
                 <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
