--- a/devWebI/aula/css2/index.html
+++ b/devWebI/aula/css2/index.html
@@ -15,7 +15,6 @@
 
     </header>
     <main>
-
         <p class="destaque">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni deleniti, sint dicta corporis vel vitae perspiciatis dolore beatae in adipisci.</p>
 
         <h1>Lorem ipsum dolor sit amet.</h1>
@@ -36,14 +35,19 @@
         <p class="destaque">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime incidunt corrupti maiores eius repellat temporibus explicabo, architecto recusandae pariatur optio, vitae cupiditate voluptatum minima similique ex enim eligendi iste repellendus ipsa voluptatibus beatae. Iusto incidunt adipisci laboriosam animi in. Nesciunt!</p>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aspernatur modi quaerat optio nesciunt repellendus obcaecati nulla, inventore a, dolorem fugiat maxime porro? Dolores dolorum similique voluptates a. Fuga, officia.</p>
+
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nostrum corporis quia ipsa ex et assumenda pariatur totam velit tempora?</h3>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et consequuntur. Amet repudiandae nihil aperiam.</p>
     </section>
     <footer>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, animi?</p>
         <nav>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias, iure!</p>
             <ul>
-                <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-                <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                <li><a href="#" title="Informação complementar">Lorem ipsum dolor sit amet.</a></li>
+                <li><a href="#" title="Teste">Lorem ipsum dolor sit amet.</a></li>
                 <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
             </ul>
         </nav>
