--- a/devWebI/aula/exercicio-avaliativo-I/index.html
+++ b/devWebI/aula/exercicio-avaliativo-I/index.html
@@ -39,8 +39,8 @@
         </p>
         <article>
           <p>
-            Mesmo com a guerra e a crise econômica,<a href="#">
-
+            Mesmo com a guerra e a crise econômica,
+						<a href="#">
 							o dólar operou em queda na
 							última semana.
 						</a>
