--- a/devWebI/aula/exercicio-avaliativo-II/index.html
+++ b/devWebI/aula/exercicio-avaliativo-II/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atividade Avaliativa 1 - Lucas e Luis</title>
-    <link rel="stylesheet" href="/devWebI/aula/exercicio-avaliativo-II/atividade-alunos/style.css"/>
+    <link rel="stylesheet" href="/devWebI/aula/exercicio-avaliativo-II/style.css" />
   </head>
-  <body>
-    <header>
+  <body id="main-body">
+    <header class="cabecalho">
       <figure>
         <img src="/devWebI/aula/exercicio-avaliativo-II/atividade-alunos/topo.png" alt="cabecalho" />
         <h1>ECONOMIA</h1>
@@ -17,7 +17,7 @@
         </h2>
       </figure>
     </header>
-    <main>
+    <main class="noticia-economia">
       <section>
         <figure>
           <img src="/devWebI/aula/exercicio-avaliativo-II/atividade-alunos/img01.webp" alt="1" />
@@ -39,7 +39,7 @@
         <article>
           <p>
             Mesmo com a guerra e a crise econômica,
-						<a href="#">
+						<a class="noticia" href="#">
 							o dólar operou em queda na
 							última semana.
 						</a>
@@ -56,7 +56,7 @@
             inesperadas.
           </p>
 
-          <a>Guia do Investidor UOL: evento grátis ensina você a investir.</a>
+          <a class="noticia">Guia do Investidor UOL: evento grátis ensina você a investir.</a>
 
           <p>
             Mas você sabe quais são as moedas mais desvalorizadas do mundo em
