--- a/devWebI/aula/seminario-css/index.html
+++ b/devWebI/aula/seminario-css/index.html
@@ -1,54 +1,122 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./src/css/animations.css" />
-  <link rel="stylesheet" href="./src/css/style.css" />
-  <title>Unidades no CSS</title>
-</head>
-<body>
-  <main class="container">
-    <h1>📐 Unidades no CSS</h1>
-    <p>Escolha uma unidade para ver como ela afeta o tamanho do elemento.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/css/animantions.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
 
-    <section>
-      <h2>🧮 Unidades Relativas</h2>
-      <ul>
-        <li><input type="radio" value="px" name="unit" id="px"><label for="px">px - Pixels</label></li>
-        <li><input type="radio" value="em" name="unit" id="em"><label for="em">em - Relativo ao elemento pai</label></li>
-        <li><input type="radio" value="rem" name="unit" id="rem"><label for="rem">rem - Relativo ao elemento raiz</label></li>
-        <li><input type="radio" value="%" name="unit" id="percent"><label for="percent">% - Porcentagem do pai</label></li>
-        <li><input type="radio" value="vw" name="unit" id="vw"><label for="vw">vw - Largura da viewport</label></li>
-        <li><input type="radio" value="vh" name="unit" id="vh"><label for="vh">vh - Altura da viewport</label></li>
-        <li><input type="radio" value="vmin" name="unit" id="vmin"><label for="vmin">vmin - Menor dimensão da viewport</label></li>
-        <li><input type="radio" value="vmax" name="unit" id="vmax"><label for="vmax">vmax - Maior dimensão da viewport</label></li>
-      </ul>
-    </section>
+    <title>Exemplo de Unidades no CSS</title>
+  </head>
+  <body>
+    <main class="container">
+      <h1>📐 Unidades no CSS</h1>
+      <p>Escolha uma unidade para ver como ela afeta o tamanho do elemento.</p>
 
-    <section>
-      <h2>📏 Unidades Absolutas</h2>
-      <ul>
-        <li><input type="radio" value="cm" name="unit" id="cm"><label for="cm">cm - Centímetros</label></li>
-        <li><input type="radio" value="mm" name="unit" id="mm"><label for="mm">mm - Milímetros</label></li>
-        <li><input type="radio" value="in" name="unit" id="in"><label for="in">in - Polegadas</label></li>
-        <li><input type="radio" value="pt" name="unit" id="pt"><label for="pt">pt - Pontos</label></li>
-        <li><input type="radio" value="pc" name="unit" id="pc"><label for="pc">pc - Picas</label></li>
-      </ul>
-    </section>
-
-    <section>
-        <h2>📚 Outras Unidades Relativas (baseadas em fonte)</h2>
+      <section>
+        <h2>🧮 Unidades Relativas</h2>
         <ul>
-          <li><input type="radio" value="ch" name="unit" id="ch"><label for="ch">ch - largura do caractere 0</label></li>
-          <li><input type="radio" value="ex" name="unit" id="ex"><label for="ex">ex - altura da letra x</label></li>
+          <li>
+            <input type="radio" value="em" name="unit" id="em" /><label for="em"
+              >em - Relativo ao elemento pai</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="rem" name="unit" id="rem" /><label
+              for="rem"
+              >rem - Relativo ao elemento raiz</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="%" name="unit" id="percent" /><label
+              for="percent"
+              >% - Porcentagem do pai</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="vw" name="unit" id="vw" /><label for="vw"
+              >vw - Largura da viewport</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="vh" name="unit" id="vh" /><label for="vh"
+              >vh - Altura da viewport</label
+            >
+          </li>
+          <li>
+            <input id="radioVmin" type="radio" value="vmin" name="unit" id="vmin" />
+            <label
+            for="vmin"
+            >vmin - Menor dimensão da viewport</label
+            >
+          </li>
+          <li>
+            <input id="radioVmax" type="radio" value="vmax" name="unit" id="vmax" /><label
+              for="vmax"
+              >vmax - Maior dimensão da viewport</label
+            >
+          </li>
         </ul>
       </section>
 
-    <h2>🔍 Resultado em tempo real:</h2>
-    <div class="box" id="box">Unidade Atual: 100px</div>
-  </main>
+      <section>
+        <h2>📏 Unidades Absolutas</h2>
+        <ul>
+          <li>
+            <input type="radio" value="px" name="unit" id="px" /><label for="px"
+              >px - Pixels</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="cm" name="unit" id="cm" /><label for="cm"
+              >cm - Centímetros</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="mm" name="unit" id="mm" /><label for="mm"
+              >mm - Milímetros</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="in" name="unit" id="in" /><label for="in"
+              >in - Polegadas</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="pt" name="unit" id="pt" /><label for="pt"
+              >pt - Pontos</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="pc" name="unit" id="pc" /><label for="pc"
+              >pc - Picas</label
+            >
+          </li>
+        </ul>
+      </section>
 
-  <script src="./src/js/index.js"></script>
-</body>
+      <section>
+        <h2>📚 Outras Unidades Relativas (baseadas em fonte)</h2>
+        <ul>
+          <li>
+            <input type="radio" value="ch" name="unit" id="ch" /><label for="ch"
+              >ch - largura do caractere 0</label
+            >
+          </li>
+          <li>
+            <input type="radio" value="ex" name="unit" id="ex" /><label for="ex"
+              >ex - altura da letra x</label
+            >
+          </li>
+        </ul>
+
+        <img src="./src/img/Typography_Line_Terms.svg.png" alt="Typography_Line_Terms">
+      </section>
+
+      <h2>🔍 Resultado em tempo real:</h2>
+      <div class="box" id="box">Unidade Atual: 100px</div>
+    </main>
+
+    <script src="./src/js/index.js"></script>
+  </body>
 </html>
