--- a/devWebI/aula/flexbox/index.html
+++ b/devWebI/aula/flexbox/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="item item1">item 1</div>
+        <div class="item item1"><div>item 1</div></div>
         <div class="item item2">item 2</div>
         <div class="item item3">item 3</div>
     </div>
