--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-franca.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-franca.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="item bandeira-franca">
-            <div class="faixa bandeira-franca-azul"></div>
-            <div class="faixa bandeira-franca-branco"></div>
-            <div class="faixa bandeira-franca-vermelho"></div>
-        </div>
+        <div class="franca azul"></div>
+        <div class="franca branco"></div>
+        <div class="franca vermelho"></div>
+    </div>    
 </body>
 </html>
