--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-argentina.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-argentina.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-virado">
         <div class="argentina celeste"></div>
         <div class="argentina branco"></div>
         <div class="argentina celeste"></div>
