Atualiza a bandeira da Argentina com correção na estrutura HTML e altera a imagem da bandeira de Israel no arquivo correspondente. Adiciona estilos CSS para a bandeira de Israel.

--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-argentina.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-argentina.html
@@ -10,7 +10,9 @@
     <div class="container-virado">
         <div class="argentina celeste"></div>
         <div class="argentina branco"></div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Sol_de_Mayo-Bandera_de_Argentina.svg" alt="Sol da Argentina" class="sol-argentina">
+        </div>
         <div class="argentina celeste"></div>
-    </div>    
+    </div>
 </body>
 </html>
