--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-israel.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-israel.html
@@ -10,7 +10,7 @@
     <div class="container-virado">
         <div class="argentina celeste"></div>
         <div class="argentina branco"></div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Sol_de_Mayo-Bandera_de_Argentina.svg" alt="Sol da Argentina" class="sol-argentina">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Star_of_David.svg/640px-Star_of_David.svg.png" alt="Sol da Argentina" class="sol-argentina">
         </div>
         <div class="argentina celeste"></div>
     </div>
