--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-israel.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-israel.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container-virado">
-        <div class="argentina celeste"></div>
-        <div class="argentina branco"></div>
+        <div class="israel azul"></div>
+        <div class="israel branco"></div>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Star_of_David.svg/640px-Star_of_David.svg.png" alt="Sol da Argentina" class="sol-argentina">
         </div>
-        <div class="argentina celeste"></div>
+        <div class="israel azul"></div>
     </div>
 </body>
 </html>
