Atualiza a estrutura HTML e CSS da bandeira de Israel, corrigindo classes e adicionando estilos para exibição adequada.

--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-israel.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-israel.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container-virado">
-        <div class="israel azul"></div>
-        <div class="israel branco"></div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Star_of_David.svg/640px-Star_of_David.svg.png" alt="Sol da Argentina" class="sol-argentina">
+        <div class="israel faixa-azul"></div>
+        <div class="israel faixa-branca centraliza">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Star_of_David.svg/640px-Star_of_David.svg.png" alt="Estrela de Davi" class="estrela-israel">
         </div>
-        <div class="israel azul"></div>
-    </div>
-</body>
+        <div class="israel faixa-azul"></div>
+      </div>
+  </body>
 </html>
