Atualiza a estrutura e estilo da bandeira da Dinamarca, reorganizando as classes e adicionando flexbox para melhor exibição.

--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-dinamarca.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-dinamarca.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="dinamarca">
+    <!-- <div class="dinamarca">
         <div class="cruz-vertical"></div>
         <div class="cruz-horizontal"></div>
+    </div> -->
+    <div class="container">
+        <div class="dinamarca vermelho">
+            <div class="p1"></div>
+            <div class="p2"></div>
+            <div class="p3"></div>
+        </div>
+        <div class="dinamarca branco"></div>
+        <div class="dinamarca vermelho">
+            <div class="p1"></div>
+            <div class="p2"></div>
+            <div class="p3"></div>
+        </div>
     </div>
 </body>
 </html>
