Atualiza a estrutura e estilo da bandeira da Noruega, comentando código antigo e reorganizando a estrutura para melhor exibição.

--- a/devWebI/aula/flexbox/criando-bandeiras/bandeira-noroega.html
+++ b/devWebI/aula/flexbox/criando-bandeiras/bandeira-noroega.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="noruega">
+    <!-- <div class="noruega">
         <div class="cruz-vertical-branca">
           <div class="cruz-vertical-azul"></div>
         </div>
@@ -15,6 +15,19 @@
         <div class="cruz-horizontal-branca">
           <div class="cruz-horizontal-azul"></div>
         </div>
-    </div>
+    </div> -->
+    <div class="container">
+        <div class="branco">
+          <div class="p1"></div>
+          <div class="p2"></div>
+          <div class="p3"></div>
+        </div>
+        <div class="azul"></div>
+        <div class="branco">
+          <div class="p1"></div>
+          <div class="p2"></div>
+          <div class="p3"></div>
+        </div>
+    </div>      
 </body>
 </html>
