Atualiza a estrutura da bandeira do Texas, adicionando elementos internos à div vermelha e corrigindo a classe de estilo.

--- a/devWebI/aula/flexbox/bandeira-texas/bandeira-texas.html
+++ b/devWebI/aula/flexbox/bandeira-texas/bandeira-texas.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <div class="texas azul"></div>
-        <div class="texas vermelho"></div>
+        <div class="texas vermelho">
+            <div class="p-branco"></div>
+            <div class="p-vermelho"></div>
+        </div>
     </div>    
 </body>
 </html>
