Adiciona imagem da estrela branca à estrutura da bandeira do Texas

--- a/devWebI/aula/flexbox/bandeira-texas/bandeira-texas.html
+++ b/devWebI/aula/flexbox/bandeira-texas/bandeira-texas.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="texas azul"></div>
+        <div class="texas azul">
+            <img src="estrela-branca.png" alt="Estrela Branca" class="estrela">
+        </div>
         <div class="texas vermelho">
             <div class="p-branco"></div>
             <div class="p-vermelho"></div>
