Atualiza a imagem da estrela branca na bandeira do Texas para a versão sem fundo.

--- a/devWebI/aula/flexbox/bandeira-texas/bandeira-texas.html
+++ b/devWebI/aula/flexbox/bandeira-texas/bandeira-texas.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="texas azul">
-            <img src="estrela-branca.png" alt="Estrela Branca" class="estrela">
+            <img src="estrela_sem_fundo (1).png" alt="Estrela Branca" class="estrela">
         </div>
         <div class="texas vermelho">
             <div class="p-branco"></div>
