corrige a estrutura da seção de produtos adicionando conteúdo ao card de carros

--- a/devWebI/aula/flexbox-layout/layout1/layout1.html
+++ b/devWebI/aula/flexbox-layout/layout1/layout1.html
@@ -22,7 +22,7 @@
                 <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Bicicletas" />
                 <p>Bicicletas</p>
             </div>
-            <div class="card"></div>
+            <div class="card">
                 <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Carros" />
                 <p>Carros</p>
             </div>
