atualiza caminhos das imagens na seção de notícias para garantir a exibição correta

--- a/devWebI/aula/flexbox-layout/layout2/layout2.html
+++ b/devWebI/aula/flexbox-layout/layout2/layout2.html
@@ -18,17 +18,17 @@
 
   <main class="noticias">
     <div class="card grande">
-      <img src="img/alimentacao.jpg" alt="Alimentação Saudável">
+      <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Alimentação Saudável">
       <div class="titulo">Alimentação Saudável</div>
     </div>
 
     <div class="coluna">
       <div class="card pequeno">
-        <img src="img/ti.jpg" alt="TI">
+        <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="TI">
         <div class="titulo">Como é trabalhar com TI</div>
       </div>
       <div class="card pequeno">
-        <img src="img/exercicio.jpg" alt="Exercício">
+        <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Exercício">
         <div class="titulo">Benefícios dos Exercícios Físicos</div>
       </div>
     </div>
