atualiza caminhos das imagens nas bandeiras para garantir a exibição correta

--- a/devWebI/atividade-bandeiras/atividade-bandeira/bandeira-canada/bandeira-atividade.html
+++ b/devWebI/atividade-bandeiras/atividade-bandeira/bandeira-canada/bandeira-atividade.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="canada vermelho "></div>
         <div class="canada branco ">
-            <img src="/atividade-bandeira/image/folha-canada.png" alt="Folha do canada" class="folha-canada">
+            <img src="../image/folha-canada.png" alt="Folha do canada" class="folha-canada">
         </div>
         <div class="canada vermelho "></div>
     </div>    
