--- a/devWebI/atividade-bandeiras/atividade-bandeira/bandeira-republica-dominicana/bandeira-republica-dominicana.html
+++ b/devWebI/atividade-bandeiras/atividade-bandeira/bandeira-republica-dominicana/bandeira-republica-dominicana.html
@@ -14,7 +14,7 @@
             <div class="p3"></div>
         </div>
         <div class="dominicana branco">
-            <img src="/atividade-bandeira/image/brasao-rd.png" alt="Brasao da Republica Dominicana" class="brasao-dominicano">
+            <img src="../image/brasao-rd.png" alt="Brasao da Republica Dominicana" class="brasao-dominicano">
         </div>
         <div class="dominicana vermelho">
             <div class="p3"></div>
