atualiza caminhos das imagens para garantir a exibição correta nas seções de produtos e notícias

--- a/devWebI/aula/flexbox-layout/layout1/layout1.html
+++ b/devWebI/aula/flexbox-layout/layout1/layout1.html
@@ -19,29 +19,29 @@
     <main class="produtos">
         <section class="linha">
             <div class="card">
-                <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Bicicletas" />
+                <img src="../image/paisagem.jpg" alt="Bicicletas" />
                 <p>Bicicletas</p>
             </div>
             <div class="card">
-                <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Carros" />
+                <img src="../image/paisagem.jpg" alt="Carros" />
                 <p>Carros</p>
             </div>
             <div class="card">
-                <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Barcos" />
+                <img src="../image/paisagem.jpg" alt="Barcos" />
                 <p>Barcos</p>
             </div>
         </section>
         <section class="linha">
             <div class="card">
-                <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Calças" />
+                <img src="../image/paisagem.jpg" alt="Calças" />
                 <p>Calças</p>
             </div>
             <div class="card">
-                <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Bermudas" />
+                <img src="../image/paisagem.jpg" alt="Bermudas" />
                 <p>Bermudas</p>
             </div>
             <div class="card">
-                <img src="/devWebI/aula/flexbox-layout/image/paisagem.jpg" alt="Camisas" />
+                <img src="../image/paisagem.jpg" alt="Camisas" />
                 <p>Camisas</p>
             </div>
         </section>
